// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentAPI renders with mandatory props for one component 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-2 {
  margin-bottom: 40px;
}

.emotion-3 {
  margin: 0;
  color: #09111C;
  display: inline-block;
}

.emotion-3 svg {
  fill: #09111C;
}

@media screen and (max-width: 1439px) {
  .emotion-3 {
    font-family: "Poppins",sans-serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-3::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-3::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    font-family: "Poppins",sans-serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-3::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-3::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

.emotion-4 {
  overflow-x: auto;
}

.emotion-5 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-6 {
  border-style: solid;
  border-color: #C0C7CC;
  border-width: 0 0 1px 0;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-7 {
  border-style: solid;
  border-color: #C0C7CC;
  border-width: 0 0 1px 0;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-10 {
  border-style: solid;
  border-color: #C0C7CC;
  border-width: 0 0 1px 0;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-11 {
  border-style: solid;
  border-color: #DEE2E5;
  border-width: 0 0 1px 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

.emotion-12 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-13 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-14 {
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 24px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F0F1F3;
  border-radius: 4px;
  color: #2E3F54;
  white-space: nowrap;
}

.emotion-14 svg {
  width: 16px;
  height: 16px;
}

.emotion-14 svg {
  fill: #2E3F54;
}

.emotion-15 {
  margin: 0;
  font-family: 'DM Mono',courier;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.4285714285714286;
  padding: 1px 0px;
  display: inline-block;
}

.emotion-15::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4267857142857143em;
}

.emotion-15::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3642857142857143em;
}

.emotion-18 {
  padding: 16px 16px 16px 0;
  max-width: 100px;
  text-align: left;
  vertical-align: top;
  overflow: hidden;
}

.emotion-19 {
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #007B22;
  background-color: #E5F4EA;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-19 svg {
  width: 16px;
  height: 16px;
}

.emotion-19 svg {
  fill: #007B22;
}

.emotion-20 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #007B22;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-20 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-20 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-20.emotion-20 {
  fill: #007B22;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-20.emotion-20 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-20.emotion-20 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          component
        </span>
      </div>
      <div
        class="emotion-4"
      >
        <table
          class="emotion-5"
        >
          <thead>
            <tr>
              <th
                class="emotion-6"
              >
                Name
              </th>
              <th
                class="emotion-7"
              >
                Type
              </th>
              <th
                class="emotion-7"
              >
                Default
              </th>
              <th
                class="emotion-7"
              >
                Description
              </th>
              <th
                class="emotion-10"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-11"
            >
              <td
                class="emotion-12"
              >
                children
              </td>
              <td
                class="emotion-13"
              >
                <span
                  class="emotion-14"
                  data-testid="flag"
                >
                  <span
                    class="emotion-15"
                  >
                    string
                  </span>
                </span>
              </td>
              <td
                class="emotion-13"
              />
              <td
                class="emotion-13"
              >
                Description.
              </td>
              <td
                class="emotion-18"
              >
                <div
                  class="emotion-19"
                  data-testid="flag"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-20 emotion-21"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                    />
                  </svg>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentAPI renders with props for multiple components 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-1 {
  margin-bottom: 80px;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin-bottom: 20px;
  }
}

.emotion-3 {
  margin: 0;
  color: #09111C;
  display: inline-block;
}

.emotion-3 svg {
  fill: #09111C;
}

@media screen and (max-width: 1439px) {
  .emotion-3 {
    font-family: "Poppins",sans-serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-3::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-3::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    font-family: "Poppins",sans-serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-3::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-3::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

.emotion-4 {
  margin-bottom: 40px;
}

.emotion-5 {
  margin: 0;
  color: #2E3F54;
}

.emotion-5 svg {
  fill: #2E3F54;
}

@media screen and (max-width: 1439px) {
  .emotion-5 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-5::before {
    content: '';
    margin-bottom: -0.391em;
    display: block;
  }

  .emotion-5::after {
    content: '';
    margin-top: -0.409em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-5 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 27px;
    font-weight: 400;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-5::before {
    content: '';
    margin-bottom: -0.391em;
    display: block;
  }

  .emotion-5::after {
    content: '';
    margin-top: -0.409em;
    display: block;
  }
}

.emotion-6 {
  overflow-x: auto;
}

.emotion-7 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-8 {
  border-style: solid;
  border-color: #C0C7CC;
  border-width: 0 0 1px 0;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-9 {
  border-style: solid;
  border-color: #C0C7CC;
  border-width: 0 0 1px 0;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-12 {
  border-style: solid;
  border-color: #C0C7CC;
  border-width: 0 0 1px 0;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
  padding-bottom: 16px;
}

.emotion-13 {
  border-style: solid;
  border-color: #DEE2E5;
  border-width: 0 0 1px 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  border-width: 0;
}

.emotion-14 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-15 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-16 {
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 24px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #F0F1F3;
  border-radius: 4px;
  color: #2E3F54;
  white-space: nowrap;
}

.emotion-16 svg {
  width: 16px;
  height: 16px;
}

.emotion-16 svg {
  fill: #2E3F54;
}

.emotion-17 {
  margin: 0;
  font-family: 'DM Mono',courier;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.4285714285714286;
  padding: 1px 0px;
  display: inline-block;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4267857142857143em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3642857142857143em;
}

.emotion-20 {
  padding: 16px 16px 16px 0;
  max-width: 100px;
  text-align: left;
  vertical-align: top;
  overflow: hidden;
}

.emotion-21 {
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 24px;
  height: 24px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-style: solid;
  border-color: #007B22;
  background-color: #E5F4EA;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-21 svg {
  width: 16px;
  height: 16px;
}

.emotion-21 svg {
  fill: #007B22;
}

.emotion-22 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #007B22;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-22 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-22 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-22.emotion-22 {
  fill: #007B22;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-22.emotion-22 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-22.emotion-22 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
}

.emotion-30 {
  position: relative;
  z-index: 0;
  margin-bottom: 32px;
}

.emotion-31 {
  box-sizing: border-box;
  position: relative;
  overflow: hidden;
  height: 100%;
}

.emotion-32 {
  box-sizing: border-box;
  height: 100%;
  overflow-x: auto;
  overflow-y: auto;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
}

.emotion-32::-webkit-scrollbar {
  display: none;
}

.emotion-32 {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
  border-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-34>*:not(style) {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-35 {
  scroll-snap-align: start;
}

.emotion-36 {
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: borderRadiusSharp;
  background-color: transparent;
  color: #5A6A79;
  margin: 0;
  position: relative;
  cursor: pointer;
  border-radius: borderRadiusSharp;
  background-color: transparent;
  color: #09111C;
  border-color: #3358CC;
}

.emotion-36 svg {
  width: 24px;
  height: 24px;
}

.emotion-36:hover:not(:disabled) {
  color: #2E3F54;
}

.emotion-36:active:not(:disabled) {
  color: #2E3F54;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-36 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-36 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-37 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-37::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-37::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-39 {
  scroll-snap-align: end;
}

.emotion-40 {
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: borderRadiusSharp;
  background-color: transparent;
  color: #5A6A79;
  margin: 0;
  position: relative;
  cursor: pointer;
}

.emotion-40 svg {
  width: 24px;
  height: 24px;
}

.emotion-40:hover:not(:disabled) {
  color: #2E3F54;
}

.emotion-40:active:not(:disabled) {
  color: #2E3F54;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-40 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-40 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-42 {
  background-color: #3358CC;
  position: absolute;
  z-index: 2;
  bottom: 0px;
  left: 0px;
}

.emotion-43 {
  background-color: #DEE2E5;
  display: block;
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 2px;
  bottom: 0px;
  left: 0px;
}

.emotion-44 {
  margin: 0;
  width: 100%;
}

.emotion-44:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: -3px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-44:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-72 {
  margin-left: 0px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Button1
        </span>
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-6"
      >
        <table
          class="emotion-7"
        >
          <thead>
            <tr>
              <th
                class="emotion-8"
              >
                Name
              </th>
              <th
                class="emotion-9"
              >
                Type
              </th>
              <th
                class="emotion-9"
              >
                Default
              </th>
              <th
                class="emotion-9"
              >
                Description
              </th>
              <th
                class="emotion-12"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-13"
            >
              <td
                class="emotion-14"
              >
                children
              </td>
              <td
                class="emotion-15"
              >
                <span
                  class="emotion-16"
                  data-testid="flag"
                >
                  <span
                    class="emotion-17"
                  >
                    string
                  </span>
                </span>
              </td>
              <td
                class="emotion-15"
              />
              <td
                class="emotion-15"
              >
                Description
              </td>
              <td
                class="emotion-20"
              >
                <div
                  class="emotion-21"
                  data-testid="flag"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-22 emotion-23"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                    />
                  </svg>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="emotion-24"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Button2
        </span>
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-29"
        data-testid="tab-group"
      >
        <div
          class="emotion-30"
          data-testid="tab-bar"
        >
          <div
            class="emotion-31"
          >
            <div
              class="emotion-32"
              data-testid="scroll-container"
            >
              <div
                aria-orientation="horizontal"
                class="emotion-33"
                role="tablist"
              >
                <div
                  class="emotion-34"
                  data-testid="distribution-wrapper"
                >
                  <div
                    class="emotion-35"
                  >
                    <button
                      aria-controls="mock-nk-1"
                      aria-selected="true"
                      class="emotion-36"
                      data-testid="tab"
                      id="mock-nk-1"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="emotion-37"
                      >
                        Props
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-34"
                  data-testid="distribution-wrapper"
                >
                  <div
                    class="emotion-39"
                  >
                    <button
                      aria-controls="mock-nk-1"
                      aria-selected="false"
                      class="emotion-40"
                      data-testid="tab"
                      id="mock-nk-1"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="emotion-37"
                      >
                        Overrides
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="emotion-42"
                  data-testid="tab-bar-indicator"
                  role="presentation"
                  style="width: 0px; height: 2px; transform: translateX(0px);"
                />
              </div>
            </div>
          </div>
          <div
            class="emotion-43"
            data-testid="tab-bar-track"
            role="presentation"
          />
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="mock-nk-1"
          class="emotion-44"
          data-testid="tab-panel"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="emotion-6"
          >
            <table
              class="emotion-7"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-8"
                  >
                    Name
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Default
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Description
                  </th>
                  <th
                    class="emotion-12"
                  >
                    Required
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-13"
                >
                  <td
                    class="emotion-14"
                  >
                    children
                  </td>
                  <td
                    class="emotion-15"
                  >
                    <span
                      class="emotion-16"
                      data-testid="flag"
                    >
                      <span
                        class="emotion-17"
                      >
                        string
                      </span>
                    </span>
                  </td>
                  <td
                    class="emotion-15"
                  />
                  <td
                    class="emotion-15"
                  >
                    Description
                  </td>
                  <td
                    class="emotion-20"
                  >
                    <div
                      class="emotion-21"
                      data-testid="flag"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-22 emotion-23"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                        />
                      </svg>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="mock-nk-1"
          class="emotion-44"
          data-testid="tab-panel"
          hidden=""
          role="tabpanel"
          tabindex="-1"
        >
          <div
            class="emotion-6"
          >
            <table
              class="emotion-7"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-9"
                  >
                    Attribute
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Default
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-13"
                >
                  <td
                    class="emotion-15"
                  >
                    <div
                      class="emotion-72"
                    >
                      <span
                        class="emotion-16"
                        data-testid="flag"
                      >
                        <span
                          class="emotion-17"
                        >
                          spaceInset
                        </span>
                      </span>
                    </div>
                  </td>
                  <td
                    class="emotion-15"
                  >
                    <span
                      class="emotion-16"
                      data-testid="flag"
                    >
                      <span
                        class="emotion-17"
                      >
                        MQ&lt;string&gt;
                      </span>
                    </span>
                  </td>
                  <td
                    class="emotion-15"
                  />
                  <td
                    class="emotion-15"
                  >
                    Description.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
